@@ -10,7 +10,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclFileName.c,v 1.41.2.32 2008/09/29 13:52:56 dgp Exp $
+ * RCS: @(#) $Id: tclFileName.c,v 1.41.2.33 2008/09/30 13:16:22 dgp Exp $
  */
 
 #include "tclInt.h"
@@ -1309,10 +1309,6 @@ Tcl_GlobObjCmd(
     }
 
   endOfForLoop:
-    if (objc - i < 1) {
-	Tcl_WrongNumArgs(interp, 1, objv, "?-switch ...? name ?name ...?");
-	return TCL_ERROR;
-    }
     if ((globFlags & TCL_GLOBMODE_TAILS) && (pathOrDir == NULL)) {
 	Tcl_AppendResult(interp,
 		"\"-tails\" must be used with either "
